2009-12-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_utility.c (ol_lrc_utility_get_lyric_by_time): FIX: Crash due to NULL parameters

2009-12-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_parser.c: FIX: Deadloop on parsing LRC files.

	* src/ol_lrc_parser.h: Typto, Of->of

2009-12-09  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c (ol_option_show): Check GTK version for gtk_file_chooser_set_create_folders()

2009-12-06  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_parser.c: Fix: lrc file parse error when lack of matching right bracket

2009-11-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_about.c: CHANGE:Display logo in about dialog

	* src/ol_osd_module.c: ADD:Display message when searching lyrics

	* src/ol_osd_window.c (ol_osd_window_update_lyric_pixmap): FIX: Don't calculate the size of lyric pixmap when the lyric is NULL.

	* configure.ac: New release version

2009-11-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: CHANGE： The list of lyric path and filename pattern are improved.

	* src/ol_player_rhythmbox.c: Rhythmbox doen't return false when stopped.
	The elapsed time of Rhythmbox won't jump when resume playing.

2009-11-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: FIX: Remove fload reference of osd_window

	* src/ol_player_rhythmbox.c (ol_player_rhythmbox_get_controller): FIX: The handler of get_capacity of rhythmbox is set correctly.
	ADD: Rhythmbox now supports all player futures

2009-11-24  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c (is_file_exist): FIX: Check if the type of file is a regular file
	CHANGE: quit when no player available

	* src/ol_player_exaile03.c: FIX: Check status before getting music info or length for exaile 0.3

2009-11-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c (ol_osd_module_init_osd): Fix: translucent-on-mouse-over option does not work until the setting is changed after launched
